--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<name>reciclanavirai</name>
 	<description>Sistema de agendamento para reciclagem.</description>
 
-	<properties>
+	<!-- <properties>
 		<java.version>11</java.version>
-	</properties>
+	</properties> -->
 
 	<dependencies>
 		<dependency>
